# multiverse

./: Makefile  README.md  constants.py  main.py  pyproject.toml
multiverse/: constants.py  data.py  enums.py  exceptions.py  grid.py  robot.py
tests/: test_data.py  test_grid.py  test_main.py  test_robot.py
